--- a/packages/knowhow/package.json
+++ b/packages/knowhow/package.json
@@ -45,6 +45,7 @@
     "@modelcontextprotocol/sdk": "^1.13.3",
     "@notionhq/client": "^2.2.14",
     "@octokit/rest": "^20.0.2",
+    "@types/react": "^19.1.8",
     "asana": "^3.0.16",
     "axios": "^1.5.0",
     "cheerio": "^1.0.0",
@@ -52,6 +53,7 @@
     "express": "^4.19.2",
     "figma-js": "^1.16.1-0",
     "gitignore-to-glob": "^0.3.0",
+    "ink": "^6.0.1",
     "jira-client": "^8.2.2",
     "marked": "^10.0.0",
     "marked-terminal": "^6.2.0",
@@ -68,6 +70,7 @@
     "progress-estimator": "^0.3.1",
     "puppeteer": "^24.4.0",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
+    "react": "^19.1.0",
     "source-map-support": "^0.5.21",
     "typescript": "^4.6.3",
     "ws": "^8.18.1",
