--- a/packages/swagger-mcp/package.json
+++ b/packages/swagger-mcp/package.json
@@ -4,7 +4,7 @@
   "description": "Generate MCP servers from Swagger/OpenAPI specifications",
   "main": "dist/index.js",
   "bin": {
-    "swagger-mcp-generator": "./dist/index.js"
+    "@tyvm/swagger-mcp": "dist/index.js"
   },
   "scripts": {
     "build": "tsc",
@@ -39,5 +39,6 @@
     "dist/**/*",
     "README.md",
     "package.json"
-  ]
+  ],
+  "types": "./dist/index.d.ts"
 }
