wip on script execution

--- a/packages/knowhow/package.json
+++ b/packages/knowhow/package.json
@@ -51,10 +51,12 @@
     "axios": "^1.5.0",
     "cheerio": "^1.0.0",
     "diff": "^5.2.0",
+    "esbuild": "^0.25.8",
     "express": "^4.19.2",
     "figma-js": "^1.16.1-0",
     "gitignore-to-glob": "^0.3.0",
     "ink": "^6.0.1",
+    "isolated-vm": "^5.0.4",
     "jira-client": "^8.2.2",
     "marked": "^10.0.0",
     "marked-terminal": "^6.2.0",
