--- a/packages/swagger-mcp/package.json
+++ b/packages/swagger-mcp/package.json
@@ -32,8 +32,16 @@
     "@types/node": "^20.6.3",
     "typescript": "^4.6.3",
     "ts-node": "^10.7.0",
-    "jest": "^29.1.1",
-    "@types/jest": "^29.5.13"
+    "jest": "^29.7.0",
+    "@types/jest": "^29.5.13",
+    "ts-jest": "^29.1.1",
+    "nock": "^13.3.8",
+    "express": "^4.18.0",
+    "@types/express": "^4.17.0",
+    "supertest": "^6.3.3",
+    "@types/supertest": "^6.0.2",
+    "express-session": "^1.17.3",
+    "@types/express-session": "^1.17.7"
   },
   "files": [
     "dist/**/*",
