--- a/packages/swagger-mcp/package.json
+++ b/packages/swagger-mcp/package.json
@@ -25,6 +25,7 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^1.5.0",
+    "commander": "^11.0.0",
     "@modelcontextprotocol/sdk": "^1.13.3",
     "zod": "^3.24.2"
   },
