fix diagnostics client method and formatting

--- a/packages/knowhow/tsconfig.json
+++ b/packages/knowhow/tsconfig.json
@@ -26,6 +26,8 @@
   ],
   "exclude": [
     "node_modules",
-    "**/*.ignore.ts"
+    "**/*.ignore.ts",
+    "tests/**/fixtures/**/*.ts",
+
   ]
 }
