--- a/packages/knowhow/benchmarks/docker/Dockerfile
+++ b/packages/knowhow/benchmarks/docker/Dockerfile
@@ -1,7 +1,7 @@
 # Use Node.js 18 as base image
 FROM node:18-bullseye
 
-# Install system dependencies
+# Install system dependencies (cached layer - rarely changes)
 RUN apt-get update && apt-get install -y \
     git \
     curl \
@@ -14,34 +14,48 @@ RUN apt-get update && apt-get install -y \
 # Set working directory
 WORKDIR /app
 
-# Copy the entire knowhow codebase (not just npm package)
-COPY . /app/knowhow
-
-# Install knowhow dependencies
-WORKDIR /app/knowhow
+# Copy package files for dependency caching
+COPY package*.json ./
+# Install main dependencies (cached until package.json changes)
 RUN npm install
 
-# Build knowhow
+# Copy build configuration (cached until config changes)
+COPY tsconfig.json ./
+
+# Copy source code (this layer will be invalidated on source changes)
+COPY src/ ./src/
+
+# Build the main project (will rebuild when source changes)
 RUN npm run compile
 
-# Set up benchmarks
-WORKDIR /app/knowhow/benchmarks
+COPY . .
+
+# Now set up benchmarks in a subdirectory
+WORKDIR /app/benchmarks
+
+# Copy benchmarks package.json for dependency caching
+COPY benchmarks/package*.json ./
+
+# Install benchmarks dependencies (cached until benchmarks package.json changes)
 RUN npm install
+
+# Copy benchmarks source and build configuration
+COPY benchmarks/src/ ./src/
+COPY benchmarks/tsconfig.json ./
+
+# Build benchmarks (will rebuild when benchmarks source changes)
 RUN npm run build
 
-# Create exercises directory
-RUN mkdir -p /app/exercises
-
 # Environment variables for AI providers
-# These will be passed in at runtime via docker run -e
-ENV OPENAI_KEY=""
+ENV OPENAI_API_KEY=""
 ENV ANTHROPIC_API_KEY=""
 ENV GEMINI_API_KEY=""
 ENV XAI_API_KEY=""
 ENV CONTAINER=true
 
-# Set the working directory for exercises
+# Create exercises directory and set working directory
+RUN mkdir -p /app/exercises
 WORKDIR /app/exercises
 
 # Default command
-CMD ["node", "/app/knowhow/benchmarks/dist/cli.js"]
+CMD ["node", "/app/benchmarks/dist/cli.js"]
