--- a/packages/knowhow/benchmarks/tsconfig.json
+++ b/packages/knowhow/benchmarks/tsconfig.json
@@ -12,7 +12,12 @@
     "resolveJsonModule": true,
     "declaration": true,
     "declarationMap": true,
-    "sourceMap": true
+    "sourceMap": true,
+    "baseUrl": ".",
+    "paths": {
+      "@tyvm/knowhow": ["../ts_build/src/index"],
+      "@tyvm/knowhow/*": ["../ts_build/src/*"]
+    }
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist", "**/*.test.ts"]
