--- a/packages/knowhow/benchmarks/package.json
+++ b/packages/knowhow/benchmarks/package.json
@@ -13,20 +13,26 @@
     "clean": "rm -rf dist",
     "dev": "ts-node src/cli.ts"
   },
-  "keywords": ["benchmark", "ai", "agent", "testing"],
+  "keywords": [
+    "benchmark",
+    "ai",
+    "agent",
+    "testing"
+  ],
   "author": "Micah Riggan",
   "license": "MIT",
   "devDependencies": {
-    "@types/node": "^20.6.3",
     "@types/jest": "^29.5.13",
+    "@types/node": "^20.19.9",
     "jest": "^29.1.1",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.3"
   },
   "dependencies": {
-    "commander": "^9.4.1",
     "chalk": "^4.1.2",
+    "commander": "^9.4.1",
+    "dotenv": "^17.2.1",
     "ora": "^5.4.1",
     "yaml": "^2.3.2"
   }
