--- a/packages/knowhow/package.json
+++ b/packages/knowhow/package.json
@@ -50,6 +50,7 @@
     "asana": "^3.0.16",
     "axios": "^1.5.0",
     "cheerio": "^1.0.0",
+    "commander": "^14.0.0",
     "diff": "^5.2.0",
     "esbuild": "^0.25.8",
     "express": "^4.19.2",
