updating language tests

--- a/packages/knowhow/package.json
+++ b/packages/knowhow/package.json
@@ -57,11 +57,13 @@
     "express": "^4.19.2",
     "figma-js": "^1.16.1-0",
     "gitignore-to-glob": "^0.3.0",
+    "glob": "^11.0.3",
     "ink": "^6.0.1",
     "isolated-vm": "^5.0.4",
     "jira-client": "^8.2.2",
     "marked": "^10.0.0",
     "marked-terminal": "^6.2.0",
+    "minimatch": "^10.0.3",
     "morgan": "^1.10.0",
     "node-fetch": "^3.2.3",
     "node-jq": "^6.0.1",
