--- a/packages/knowhow/package.json
+++ b/packages/knowhow/package.json
@@ -46,7 +46,6 @@
     "@modelcontextprotocol/sdk": "^1.13.3",
     "@notionhq/client": "^2.2.14",
     "@octokit/rest": "^20.0.2",
-    "@types/glob": "^8.1.0",
     "@types/react": "^19.1.8",
     "asana": "^3.0.16",
     "axios": "^1.5.0",
@@ -57,7 +56,7 @@
     "express": "^4.19.2",
     "figma-js": "^1.16.1-0",
     "gitignore-to-glob": "^0.3.0",
-    "glob": "^8.1.0",
+    "glob": "11.0.3",
     "ink": "^6.0.1",
     "isolated-vm": "^5.0.4",
     "jira-client": "^8.2.2",
