wip on tree-sitter paths and editor paths

--- a/packages/knowhow/tsconfig.json
+++ b/packages/knowhow/tsconfig.json
@@ -27,7 +27,8 @@
   "exclude": [
     "node_modules",
     "**/*.ignore.ts",
-    "tests/**/fixtures/**/*.ts"
+    "tests/**/fixtures/**/*.ts",
+    "tests/tree-sitter/test-files/**/*.ts"
 
   ]
 }
