--- a/packages/knowhow/package.json
+++ b/packages/knowhow/package.json
@@ -40,6 +40,7 @@
   "dependencies": {
     "@anthropic-ai/sdk": "^0.39.0",
     "@aws-sdk/client-s3": "^3.588.0",
+    "@tyvm/knowhow-tunnel": "file:../knowhow-tunnel",
     "@google/genai": "^0.14.1",
     "@inquirer/editor": "^4.2.18",
     "@linear/sdk": "^12.0.0",
